2004-08-4  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/abstract/Container.chs, gtk/treeList/TreeSelection.chs,
	gtk/treeList/TreeModelSort.chs, gtk/treeList/TreeViewColumn.chs,
	gtk/treeList/TreeModel.chs: add missing functions.

	* gtk/abstract/api.ignore, gtk/treeList/api.ignore: update list of
	ignored functions.

2004-08-3  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/abstract/FileChooser.chs, gtk/general/FFI.hs: move a couple of
	string marshaling functions to a common location.

	* tools/apicoverage/Makefile: accurate count of unbound gtk functions.

	* tools/apicoverage/gtk.ignore: add a few more APIs to ignore.

	* gtk/buttons/ToggleButton.chs, gtk/buttons/RadioButton.chs,
	gtk/display/AccelLabel.chs, gtk/general/IconFactory.chs,
	gtk/menuComboToolbar/CheckMenuItem.chs,
	gtk/menuComboToolbar/RadioMenuItem.chs:	add missing functions. Also
	tidy up documentation a bit.

	* gtk/menuComboToolbar/api.ignore: exclude deprecated and internal
	radio_menu_item and toolbar functions.

	* tools/callbackGen/gtkmarshal.list: updated marshal list from gtk-2.4.
	It adds several new ones and removes a few which we don't seem to use.
	Required for a signal in the Toolbar module. 
	
	* tools/hierarchyGen/hierarchy.list: new classes for gtk-2.4, a few old
	ones that were missing and some more Gdk classes.

	* gtk/menuComboToolbar/ImageMenuItem.chs: fix type error introduced by
	c2hs being able to 'see' new AccelGroup class. Also fiddle with docs.

	* gtk/menuComboToolbar/Toolbar.chs, gtk/menuComboToolbar/MenuItem.chs
	gtk/menuComboToolbar/Menu.chs: add missing functions, including
	accelerator-related ones. Also tidy up documentation a bit.

	* gtk/general/Structs.hsc: remove unneeded toolbar function.

	* gtk/selectors/ColorSelection.chs, gtk/selectors/FontSelection.chs
	gtk/selectors/ColorSelectionDialog.chs,
	gtk/selectors/FontSelectionDialog.chs, gtk/layout/Fixed.chs,
	gtk/misc/SizeGroup.chs, gtk/menuComboToolbar/ToolItem.chs: new modules
