@@ -351,6 +351,15 @@ for FLAG in $TMPGCONF_LIBS; do
   esac;
 done;
 
+dnl Check if user wants bindings for deprecated APIs. Defaults to yes.
+AC_MSG_CHECKING([whether to build deprecated bindings])
+
+AC_ARG_ENABLE(deprecated,
+	     [  --disable-deprecated    do not generate bindings for any deprecated APIs],
+	     [ENABLE_DEPRECATED=$enableval],[ENABLE_DEPRECATED=yes])
+
+DISABLE_DEPRECATED=`test $ENABLE_DEPRECATED = yes && echo no || echo yes`
+AC_MSG_RESULT($ENABLE_DEPRECATED)
 
 dnl Have a special marshall list (available in the source tree of Gtk+ under
 dnl gtk/gtkmarshal.list)
@@ -556,6 +565,7 @@ dnl AC_SUBST(GTK_MINOR_VERSION)
 dnl AC_SUBST(GTK_MICRO_VERSION)
 AC_SUBST(GTK_VERSION_2_2)
 AC_SUBST(GTK_VERSION_2_4)
+AC_SUBST(DISABLE_DEPRECATED)
 dnl Optional packages
 AC_SUBST(ENABLE_OPENGL)
 AC_SUBST(ENABLE_LIBGLADE)
