@@ -7,6 +7,10 @@
 	* gtk/abstract/api.ignore, gtk/treeList/api.ignore: update list of
 	ignored functions.
 
+	* configure.in, mk/config.mk.in, tools/hierarchyGen/hierarchy.list,
+	gtk/Makefile: add --disable-deprecated config option. Note that this
+	configuration will not build sucessfully yet.
+
 2004-08-3  Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* gtk/abstract/FileChooser.chs, gtk/general/FFI.hs: move a couple of
